[package]
name = "enum-unitary"
version = "0.4.2"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "Trait and macro for unitary enums"
repository = "https://github.com/spearman/enum-unitary"
readme = "README.md"
edition = "2018"

[dependencies]
enum-iterator = "0.7.*"
num-traits = "0.2.*"
