[package]
name = "enum-unitary"
version = "0.5.0"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "Trait and macro for unitary enums"
repository = "https://github.com/spearman/enum-unitary"
readme = "README.md"
edition = "2018"

[dependencies]
num-traits = "0.2.*"
enum-iterator = "1.*"
